# cute-dbt

./: .aikido  .gitattributes  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PR_BODY.md  README.md  SECURITY.md  check-selection.html  clippy.toml  crap4rs.toml  deny.toml  examples.html  experimental.html  explore-contract.html  getting-started.html  how-it-works.html  index.html  introduction.html  lefthook.yml  one-command-review.html  package.json  print.html  release-discipline.html  release-plz.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0577d594.js  searchindex-08e6ab1c.js  searchindex-11b6e832.js  searchindex-24c0a6a2.js  searchindex-25b4af0c.js  searchindex-2ba07985.js  (+36 more)
.cargo/: mutants.toml
.claude/rules/: testing.md
.config/: nextest.toml
.github/: branch-protection.json
.github/workflows/: ci.yml  fuzz.yml  mdbook.yml  pr-preview-cleanup.yml  release-plz.yml  report-preview.yml  review-app.yml
apps/review/: .dependency-cruiser.cjs  crap4ts.config.ts  eslint.config.js  index.html  package.json  playwright.config.ts  stryker.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.mutation.config.ts
assets/: MANIFEST.toml  cytoscape-dagre-4.0.0.min.js
book/: book.toml
book/src/: SUMMARY.md  check-selection.md  examples.md  experimental.md  explore-contract.md  getting-started.md  how-it-works.md  introduction.md  one-command-review.md  release-discipline.md  the-solution.md  zero-egress.md
checks/: enforcement.constraint-unbacked.html  grain.unique-key-unbacked.html  incremental.branch-coverage.html  index.html  join.anti-join.html  join.left-null-propagation.html  union.arm-coverage.html
dbt-project/: .gitignore  README.md  dbt_project.yml  profiles.yml
dbt-project/macros/: cents_to_dollars.sql  incremental_high_water_mark.sql  is_authorized.sql  mask_pii.sql
dbt-project/models/: customers.sql  docs.md  orders.sql  overview.md  schema.yml
dbt-project/seeds/: raw_payments.csv
docs/design/: explore-handoff.md  macro-lens-handoff.md
examples/: README.md  diff-showcase-findings.json  diff-showcase-report.html  explore.html  jaffle-shop-report.html  playground-pr-diff-report.html  playground-report.html  reports.html
examples/explore/: dag.html  tests.html
examples/explore-macro/: dag.html  macro.html  tests.html
examples/explore-seed/: dag.html  tests.html
features/: README.md  agent_skill.feature  cell_table_diff.feature  check_selection.feature  config.feature  consumer_report_contract.feature  coverage_checks.feature  cte_rendering.feature  diff_scoping.feature  explore_change_context.feature  explore_cli.feature  explore_full_manifest.feature  explore_js_contract.feature  explore_lineage_dag.feature  explore_macro_view.feature  explore_model_detail.feature  explore_test_badges.feature  explore_view_toggle.feature  fail_closed.feature  incremental_models.feature  index.html  macro_perspective.feature  one_command_review.feature  pr_comments.feature  pr_diff_scoping.feature  project_definition.feature  report_generation.feature  review_compile.feature  review_pr_anchor.feature  review_scope_variants.feature  unit_test_format_coverage.feature  unit_test_yaml.feature  zero_egress.feature
heuristics/: registry.toml
pr-151/diff-showcase/: report.html
pr-151/playground/: report.html
pr-152/jaffle-shop/: report.html
pr-154/dbt-project/: report.html
pr-154/jaffle-shop/: report.html
pr-154/playground/: report.html
pr-156/dbt-project/: report.html
pr-156/playground/: report.html
pr-158/diff-showcase/: report.html
pr-158/jaffle-shop/: report.html
pr-158/playground/: report.html
pr-161/dbt-project/: report.html
pr-162/jaffle-shop/: report.html
pr-166/dbt-project/: report.html
pr-174/diff-showcase/: report.html
pr-181/jaffle-shop/: report.html
pr-186/dbt-project/: report.html
pr-186/diff-showcase/: report.html
pr-187/diff-showcase/: report.html
pr-187/jaffle-shop/: report.html
pr-188/diff-showcase/: report.html
pr-188/jaffle-shop/: report.html
pr-189/diff-showcase/: report.html
pr-189/playground/: report.html
pr-191/dbt-project/: report.html
pr-191/diff-showcase/: report.html
pr-192/playground/: report.html
pr-193/playground/: report.html
pr-194/diff-showcase/: report.html
pr-194/jaffle-shop/: report.html
pr-194/playground/: report.html
pr-195/dbt-project/: report.html
pr-203/diff-showcase/: report.html
pr-203/jaffle-shop/: report.html
pr-205/diff-showcase/: report.html
pr-207/dbt-project/: report.html
pr-211/playground/: report.html
pr-213/jaffle-shop/: report.html
pr-214/jaffle-shop/: report.html
pr-221/jaffle-shop/: report.html
pr-228/jaffle-shop/: report.html
pr-234/jaffle-shop/: report.html
pr-321/explore-live/: dag.html  tests.html
pr-364/explore/: dag.html
pr-423/explore/: dag.html
pr-432/explore/: dag.html
pr-434/explore/: tests.html
pr-437/explore/: dag.html
pr-440/explore/: dag.html  tests.html
pr-440/explore-live/: dag.html  tests.html
pr-453/explore/: tests.html
recipes/: github-actions-pr-review.html
src/: fake_tool.rs  lib.rs  main.rs
src/cli/: args.rs  (+6 more)
templates/: README.md  appearance.js  cyto-dag.js  explore-cte.js  explore-dag.html  explore-lineage.js  explore-macro.html  explore-tests.html  explore-tests.js  interaction.js  report.css  report.html  theme.js
tests/: asset_embed.rs  assets_manifest.rs  bdd.rs  binary_smoke.rs  cell_table_diff.rs  changed_files_provider.rs  check_engine.rs  column_meta_handoff_schema.rs  cross_model_column_lineage.rs  cte_engine.rs  diff_scoping.rs  domain_clean_arch.rs  external_fixture_reader.rs  fake_tool.rs  fixture_manifest_listed.rs  fixture_parse.rs  github_annotations.rs  golden_report.rs  headless_csv_parser.rs  headless_toggle.rs  headless_zero_egress.rs  heuristics_ledger.rs  lineage_seam.rs  manifest_ingestion.rs  path_matching.rs  pr_comments_ingestion.rs  render_integration.rs  resource_ref_lint.rs  review_cli.rs  run_loop.rs  skill_cli.rs  sqlparser_comment_preservation.rs
(+390 files in other folders)
