[package]
name = "cute4dbt"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zero-compute Rust CLI: parse dbt manifest.json into one self-contained interactive HTML report of unit tests"
repository = "https://github.com/breezy-bays-labs/cute-dbt"
homepage = "https://github.com/breezy-bays-labs/cute-dbt"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
rust-version = "1.85"
readme = "README.md"
keywords = ["dbt", "unit-test", "cte", "analytics-engineering", "cli"]
categories = ["command-line-utilities", "development-tools", "visualization"]

# Single-crate by deliberate design — see ARCHITECTURE.md. The hexagonal
# layering (`src/{domain,ports,adapters,cli}`) is enforced by module
# convention + clippy + review, not by Cargo crate boundaries.
# A workspace earns its keep when more than one crate ships; cute-dbt has
# one binary and one product, so a workspace would be empty ceremony. The
# `non-mirror-guard` CI job rejects a future `[workspace]` block here so the
# single-crate decision is structurally enforced.

[[bin]]
name = "cute-dbt"
path = "src/main.rs"

[lib]
name = "cute4dbt"
path = "src/lib.rs"

# v0.1 seed deps only. Feature deps land with their PRs — adding each dep
# in the PR that first uses it avoids unused-dep clippy noise on stubs:
#   clap        -> PR 6 (CLI surface)
#   askama      -> PR 8b (renderer, pinned 0.16)
#   sqlparser   -> PR 7 (CTE engine, pinned 0.62)
#   toml        -> PR 6 (config loading)
#   insta       -> PR 4a (golden-snapshot scaffold)
#   cucumber    -> PR 10 (ATDD wiring)
#   tl          -> PR 9 (resource-ref lint HTML parser)
#   chromiumoxide / headless_chrome -> PR 9 (zero-egress test)
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62"
thiserror = "2"

[dev-dependencies]
# Fixture-gate toolchain (PR 4a, #5):
#   insta  -> golden-snapshot scaffold (first real snapshot lands PR 4b).
#   toml   -> parse `tests/fixtures/MANIFEST.toml` in `tests/fixture_*.rs`
#            so the synthetic-only invariant has a fast local signal
#            alongside the structural CI grep job `fixture-manifest-gate`.
#   sha2 + hex -> compute SHA-256 of each listed fixture file for the
#            MANIFEST.toml integrity assertion (belt-and-braces with CI).
#   walkdir -> walk `tests/fixtures/` from the listed-test (std-only walk
#            would re-implement walkdir; the dev-only dep is cheap).
insta = "1"
toml = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"

# Crate-wide lint config. `clippy::pedantic` + `clippy::cargo` fire via
# the crate-root `#![warn(...)]` in `src/lib.rs`, so `clippy -D warnings`
# automatically enforces them without extra flags. See `clippy.toml` for
# the cognitive-complexity threshold.
[lints.rust]
unsafe_code = "forbid"
