[package]
name = "cute-dbt"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zero-compute Rust CLI: parse dbt manifest.json into one self-contained interactive HTML report of unit tests"
repository = "https://github.com/breezy-bays-labs/cute-dbt"
homepage = "https://github.com/breezy-bays-labs/cute-dbt"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
# 1.88 since cute-dbt#266 (dbt-yaml — dbt Labs' published serde-yaml
# fork, the parser dbt-fusion itself ships — requires rust 1.88) and
# cute-dbt#276 (the collapsible_if let-chain fixes need 1.88's
# stabilization). The CI `MSRV` job + .github/branch-protection.json
# carry the version-agnostic check name so future bumps touch only this
# line and the toolchain pin.
rust-version = "1.88"
readme = "README.md"
# crates.io rejects keywords >20 chars server-side at upload (and
# `cargo package` does not warn): `analytics-engineering` is 21 chars,
# replaced with `data-engineering` (cute-dbt#293). Max 5, each ≤20.
keywords = ["dbt", "unit-test", "cte", "data-engineering", "cli"]
categories = ["command-line-utilities", "development-tools", "visualization"]
# Package whitelist (cute-dbt#293): the published .crate ships only what
# the build + crates.io page need. `templates/**` and `assets/**` are
# LOAD-BEARING — every vendored frontend asset and askama template is
# embedded at compile time (`include_str!`/`include_bytes!` from
# src/adapters/), so the verify build breaks without them;
# `assets/MANIFEST.toml` (the provenance index) travels inside
# `assets/**` by design. Excluded: examples/, tests/, dbt-project/,
# book/, .github/, agent notes. Cargo.toml itself is always included.
include = [
    "src/**",
    "templates/**",
    "assets/**",
    # Leading `/` anchors to the package root — the patterns are
    # gitignore-style, so a bare `README.md` would also drag in
    # `dbt-project/README.md` and `examples/README.md`.
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# Single-crate by deliberate design — see ARCHITECTURE.md. The hexagonal
# layering (`src/{domain,ports,adapters,cli}`) is enforced by module
# convention + clippy + review, not by Cargo crate boundaries.
# A workspace earns its keep when more than one crate ships; cute-dbt has
# one binary and one product, so a workspace would be empty ceremony. The
# `non-mirror-guard` CI job rejects a future `[workspace]` block here so the
# single-crate decision is structurally enforced.

[[bin]]
name = "cute-dbt"
path = "src/main.rs"

[lib]
name = "cute_dbt"
path = "src/lib.rs"

# v0.1 seed deps only. Feature deps land with their PRs — adding each dep
# in the PR that first uses it avoids unused-dep clippy noise on stubs:
#   clap        -> PR 6 (CLI surface)
#   askama      -> PR 8b (renderer, pinned 0.16)
#   sqlparser   -> PR 7 (CTE engine, pinned 0.62)
#   toml        -> PR 6 (config loading)
#   insta       -> PR 4a (golden-snapshot scaffold)
#   cucumber    -> PR 10 (ATDD wiring)
#   tl          -> PR 9 (resource-ref lint HTML parser) — landed
#   headless_chrome -> PR 9 (zero-egress test) — landed
[dependencies]
askama = { version = "0.16", features = ["serde_json"] }
# `env` (cute-dbt#289): the CUTE_DBT_EXPERIMENTAL override is read via
# clap's env-fallback on a hidden `report` arg, so an invalid value is
# a clap usage error (exit 2) exactly like the `[experimental]` TOML arm.
clap = { version = "4", features = ["derive", "env"] }
# dbt_project.yml ingestion (cute-dbt#266): dbt Labs' published fork of
# serde-yaml — the exact parser dbt-fusion ships (~31 fusion crates),
# so anchor/alias resolution, merge-key (`<<:`) semantics, and
# duplicate-key policy match the source-of-truth engine by construction.
# Default features only (no `filename`/`schemars`/`flatten_dunder` —
# fusion-internal concerns). Requires MSRV 1.88. Fallback seam:
# serde-saphyr swaps behind adapters::project_def::parse (plain fn).
dbt-yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62"
thiserror = "2"
# Runtime dep since PR 14 (#24): the `--config <PATH>` clap value-parser
# parses the operator-supplied TOML into `domain::AnalysisConfig`. The
# fixture-gate tests (`tests/fixture_*.rs`) also use this crate; they
# now share the runtime entry.
toml = "1"

[dev-dependencies]
# Fixture-gate toolchain (PR 4a, #5):
#   insta  -> golden-snapshot scaffold (first real snapshot lands PR 4b).
#   (toml -> promoted to runtime in PR 14, see [dependencies]; the
#            fixture-gate tests still use it to parse
#            `tests/fixtures/MANIFEST.toml`.)
#   sha2 + hex -> compute SHA-256 of each listed fixture file for the
#            MANIFEST.toml integrity assertion (belt-and-braces with CI).
#   walkdir -> walk `tests/fixtures/` from the listed-test (std-only walk
#            would re-implement walkdir; the dev-only dep is cheap).
#
# Zero-egress gate toolchain (PR 9, #12):
#   headless_chrome -> drives a real Chromium against the committed
#            examples/jaffle-shop-report.html via file://. Synchronous
#            API (no tokio dep) — the test reads top-to-bottom so the
#            auditor can follow the proof linearly. CDP subscription
#            captures every Network.requestWillBeSent event; the
#            assertion is "filter to http/https/ws/wss → empty".
#   tl       -> zero-dep HTML parser for the secondary structural lint
#            over the rendered chrome. Rejects real loading constructs
#            (<script src>, <link href>, <img src>, CSS @import,
#            CSS url(), protocol-relative //) — never raw `grep http`,
#            which is false-positive noise against minified bundles.
#
# ATDD outer-loop toolchain (PR 10, #13):
#   cucumber -> Gherkin runner for the `.feature` acceptance contract.
#            Wired with `harness = false` on the bdd target so the
#            cucumber-generated main owns scenario dispatch. `cargo
#            nextest` is NOT compatible with `harness = false`; the bdd
#            target is invoked via `cargo test --test bdd` (the
#            `.cargo/mutants.toml` `test_tool = "cargo"` preserves that
#            invocation under mutation testing).
insta = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
headless_chrome = "1.0.21"
tl = "0.7.8"
cucumber = "0.23"
# Synchronous executor for the cucumber runner. cute-dbt has no `tokio`
# dep (the binary is fully sync). Using `futures::executor::block_on`
# in `tests/bdd.rs` keeps the harness sync and avoids pulling tokio
# into the supply-chain footprint. The `futures` crate is a thin
# meta-crate; cucumber already pulls in the underlying primitives
# transitively, so this is a near-zero footprint addition.
futures = "0.3"

# Cucumber-rs requires `harness = false` (the cucumber runner replaces
# libtest's harness with its own dispatcher). This declaration tells
# cargo to build `tests/bdd.rs` as a standalone test binary whose
# `main()` lives in the source file. `cargo nextest run` cannot
# enumerate scenarios from a `harness = false` binary; the bdd target
# is invoked via `cargo test --test bdd` in CI and locally.
[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false

# Crate-wide lint config. `clippy::pedantic` + `clippy::cargo` fire via
# the crate-root `#![warn(...)]` in `src/lib.rs`, so `clippy -D warnings`
# automatically enforces them without extra flags. See `clippy.toml` for
# the cognitive-complexity threshold.
[lints.rust]
unsafe_code = "forbid"
